[package]
name = "pyth-pusher"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
base64 = "0.22.1"
clap = { version = "4.5.45", features = ["derive", "env"] }
near-crypto = "0.28.0"
near-gas = "0.3.2"
near-jsonrpc-client = "0.15.1"
near-jsonrpc-primitives = "0.28.0"
near-primitives = "0.28.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = "1.0.227"
serde_json = "1.0"
thiserror = "2.0.16"
tokio = { version = "1.30.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
